RMi update and model modified